Fix: 재료 리스트 align-items 변경

--- a/src/styles/SearchBox.module.css
+++ b/src/styles/SearchBox.module.css
@@ -81,4 +81,5 @@
   grid-gap: 20px;
   place-items: center;
   cursor: default;
+  align-items: start;
 }
